deploy/management/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secureops-management-ingress
  namespace: secureops
  labels:
    app: secureops
    plane: management
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "secureops-sticky"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "3600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.secureops.io
      secretName: secureops-management-tls
  rules:
    - host: app.secureops.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: secureops-management
                port:
                  number: 80
